...
                                <rect key="frame" x="0.0" y="43" width="414" height="693"/>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FDE-ic-0Jw">
                                <rect key="frame" x="50" y="325" width="314" height="30"/>
                                <nil key="textColor"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1WT-L3-Iu3">
                                <rect key="frame" x="50" y="382" width="314" height="30"/>
                                <nil key="textColor"/>
...
                                <color key="backgroundColor" red="1" green="0.24568542609999999" blue="0.26938740589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Sign Up !">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password again" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="63a-6k-SOW">
                                <rect key="frame" x="50" y="439" width="314" height="30"/>
                                <nil key="textColor"/>
...
                        <outlet property="ConfirmPW" destination="63a-6k-SOW" id="Eyg-Pg-Bde"/>
                        <outlet property="Email" destination="FDE-ic-0Jw" id="HeK-LO-Kli"/>
                        <outlet property="Password" destination="1WT-L3-Iu3" id="VVc-Ei-vZU"/>
                        <outlet property="SignUp" destination="Amj-i2-bQI" id="egN-h1-J6c"/>
                    </connections>
...
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <inset key="imageEdgeInsets" minX="-15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Sign up for free" image="rightarrow.png">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Sign in">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" cocoaTouchSystemColor="lightTextColor"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cy5-xz-vQB">
                                <rect key="frame" x="68" y="376" width="278" height="30"/>
                                <nil key="textColor"/>
...
            <objects>
                <navigationController id="jB7-ZZ-gFT" customClass="MainNavigationController" customModule="Matchme" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Message" image="chat.png" badgeValue="1" id="y5a-eW-24I"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OP4-pu-zCF">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Jane" id="9qH-fu-KYh">
                        <barButtonItem key="backBarButtonItem" title="Back" id="9AG-Em-5WA"/>
                        <barButtonItem key="rightBarButtonItem" image="man1.png" id="yum-qt-Ozq">
...
            <objects>
                <navigationController id="yfK-7J-7XC" customClass="MainNavigationController" customModule="Matchme" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Me" image="013profile.png" id="1Ug-U2-sYD"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DrY-VQ-xwk">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
...
            <objects>
                <navigationController id="OnB-OC-nAr" customClass="MainNavigationController" customModule="Matchme" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Match" image="001hearts.png" id="l8W-AD-tzh"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HaW-c2-qzG">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
...
